[package]
name = "quinn-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
quinn = "0.8"
rustls = { version = "0.20" }
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1.29"
tracing-subscriber = { version="0.3", features=["env-filter"] }
